@@ -21,6 +21,7 @@
 	removed unnecessary -lsybdb/-lsybdb64 for sybase 15+
 	fixed PQreset, PQresetStart, PQresetPoll in postgresql drop-in
 		replacement lib
+	added debug-to-file support to PHP PDO driver
 
 0.57 - fixed an overloaded virtual function error in sqlr-status
 	fixed parsing of "term as type" clauses in queries
